fix(css): code block not wrapping issue

--- a/assets/css/_partial/_single/_code.scss
+++ b/assets/css/_partial/_single/_code.scss
@@ -51,10 +51,6 @@ code, pre, .highlight table, .highlight tr, .highlight td {
       margin: 0;
       padding: 0;
       border: none !important;
-
-      span.c {
-        white-space: nowrap;
-      }
     }
   }
 
